# buho-stocks

./: .dockerignore  .env.ci.sample  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc_  .tool-versions  404.html  CHANGELOG  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  docker.client.Dockerfile  index.html  mypy.ini  nginx-app.conf  prestart.sh  pyproject.toml  requirements.dev.txt  requirements.txt  search-index-default.json  search-index-docs-default-current.json  search-index.json  setup.cfg  sitemap.xml  uwsgi.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CONTRIBUTING.md
.github/workflows/: codeql-analysis.yml  deploy-docs.yml  deploy.yml  django.yml  docker-build-publish-backend-latest.yml  docker-build-publish-backend-tag.yml  docker-build-publish-client-latest.yml  docker-build-publish-client-tag.yml  docker-build-publish-latest.yml  docker-build-publish-tag.yml  docker-build-publish.yml.yml  react.yml  test-deployment.yml  test-docs-deployment.yml
assets/css/: styles.11800434.css  styles.4a828bfc.css  styles.4d701a48.css  styles.ec19f234.css
assets/js/: 01a85c17.063b768e.js  01a85c17.35737c20.js  01a85c17.8c4d892f.js  01a85c17.c31dbdd3.js  037754c0.d303a1f0.js  0e384e19.410c9783.js  0e384e19.4d40c4fb.js  0e384e19.5664b096.js  0e384e19.c4d48424.js  0e384e19.e304f003.js  0e384e19.fabb41a9.js  0e384e19.fb2cc3e5.js  143.2a605b2c.js  17896441.27b59cf6.js  17896441.3f6b6868.js  17896441.53e5a1a7.js  17896441.7ffe1692.js  17f306b6.0d414d12.js  17f306b6.558d40f6.js  17f306b6.a0662fa9.js  17f306b6.f200b48e.js  18c41134.83d43783.js  1a4e3797.902500ec.js  1a4e3797.fe9bbdb9.js  1a7bc372.c65f9b7b.js  1be78505.0f75a12b.js  1be78505.196614dd.js  1be78505.a7d64e1d.js  1be78505.fcee8ade.js  1e4232ab.76aeaca0.js  1f391b9e.69a36f83.js  1f391b9e.a0cc8d1e.js  1f391b9e.a4e64504.js  1f391b9e.bbe1f9d1.js  22a49cbf.3ae2676b.js  22a49cbf.7be5cfcc.js  22a49cbf.edd41f28.js  230.8cab9d03.js  2529.2d2bfafe.js  2529.d467e3b7.js  (+195 more)
backend/: .coveragerc  .pylintrc_old  manage.py  mypy.ini
backend/auth/: apps.py  serializers.py  urls.py  views.py
backend/auth/tests/: factory.py  test_login.py  test_register.py
backend/benchmarks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/benchmarks/data/: benchmark-years.json  benchmarks.json
backend/benchmarks/migrations/: 0001_initial.py  0002_alter_benchmarkyear_value_currency.py  0003_alter_benchmark_options_alter_benchmarkyear_options.py  0003_alter_benchmarkyear_value_currency.py
backend/benchmarks/urls/: admin.py  api.py
backend/benchmarks/views/: admin.py  api.py
backend/buho_backend/: admin.py  asgi.py  celery_app.py  consumers.py  path_converters.py  serializers.py  settings.py  settings_loader.py  signals.py  transaction_types.py  urls.py  validators.py  views.py  wsgi.py
backend/buho_backend/settings/: common.py  dev.py  prod.py  test.py
backend/companies/: admin.py  apps.py  calculators.py  data_calculators.py  data_calculators_closed.py  filters.py  models.py  serializers.py  serializers_lite.py  urls.py  utils.py  views.py
backend/config/: config.sample.py  mysql.sample.conf
backend/currencies/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/currencies/urls/: api.py  (+1 more)
backend/dividends_transactions/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/exchange_rates/: admin.py  apps.py  ecb_api_client.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/initialize_data/: apps.py  urls.py  views.py
backend/log_messages/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/markets/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/portfolios/: admin.py  apps.py  calculators.py  data_calculators.py  models.py  serializers.py  serializers_lite.py  urls.py  utils.py  views.py
backend/rights_transactions/: apps.py  calculators.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/sectors/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/settings/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/shares_transactions/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/stats/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/stock_markets_indexes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/stock_prices/: admin.py  api.py  apps.py  fetchers.py  models.py  serializers.py  urls.py  utils.py  views.py
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/welcome/: index.html
client/: . prettierrc.yaml  .env.local  .env.test  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs  vite.config.ts  vitest.setup.mjs
client/.husky/: pre-commit
client/dev-dist/: sw.js
client/public/: index.html  manifest.json  mockServiceWorker.js
client/src/: App.css  App.test.tsx  App.tsx  AppLayout.tsx  AppTemp.tsx  LanguageLoader.tsx  Layout.tsx  Main.tsx  MainRouter.tsx  SettingsLoader.tsx  breadcrumbs.tsx  config.sample.js  config.ts  i18n.ts  index.css  index.tsx  make_version.js  make_version.ts  routes.ts  setupProxy.js  setupTests.ts  version.js  version.ts
data/: db.sqlite3.base
docs/: .gitignore  _config.yml  development.md  docker.md  docusaurus.config.js  index.md  package.json
docs/development/: database-select.md  index.md  requirements.md  run-project-locally.md
docs/docs/: intro.md
docs/intro/: index.html
docs/user-guides/: create-company.md  create-portfolio.md  deploy-te-application-docker-compose.md  index.md  initialize-app-data.md
docs_old/: CONTRIBUTING.md  development.md
etc/: entrypoint.sh
markdown-page/: index.html
nginx/: nginx.conf
search/: index.html
(+805 files in other folders)
