[tool.poetry]
name = "buho-stocks"
version = "0.204.0"
description = "Application to manage and track a stocks portfolio with dividends and return for a Buy & Hold investmentinvestment strategy."
authors = ["Rene Fernandez <renefernandez@duck.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.10"
django-cors-headers = "3.14.0"
django-filter = "22.1"
django-money = "3.0.0"
djangorestframework = "3.14.0"
djangorestframework-camel-case = "1.4.2"
drf-extra-fields = "3.4.1"
drf-yasg = "1.21.5"
pandas = "1.4.3"
pillow = "10.0.1"
requests = "2.31.0"
sentry-sdk = "1.14.0"
yfinance = "0.2.31"
gunicorn = "^21.2.0"
python-decouple = "^3.8"
requests-cache = "^1.1.0"
celery = "^5.3.4"
redis = "^5.0.1"
django-celery-results = "^2.5.1"
mysqlclient = "^2.2.0"
channels = { extras = ["daphne"], version = "^4.0.0" }
channels-redis = "^4.1.0"


[tool.poetry.group.dev.dependencies]
bandit = "1.7.4"
black = "23.1.0"
coverage = "6.2"
django-types = "0.17.0"
djangorestframework-stubs = "1.8.0"
djlint = "1.19.14"
factory-boy = "3.2.1"
faker = "11.3.0"
flake8 = "5.0.4"
flake8-django = "1.1.5"
isort = "5.12.0"
pre-commit = "2.15.0"
responses = "0.23.0"
types-requests = "2.28.11.13"
mypy = "^1.7.1"
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.7" }
drf-yasg-stubs = "^0.1.4"
django-filter-stubs = "^0.1.3"
celery-stubs = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | client
  | docs
  | data
  | media
  | migrations
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"
# isort configuration:
# https://github.com/PyCQA/isort/wiki/isort-Settings
include_trailing_comma = true
use_parentheses = true
# See https://github.com/PyCQA/isort#multi-line-output-modes
multi_line_output = 3
line_length = 120
combine_as_imports = true
src_paths = ["backend"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "buho_backend.settings.dev"
mypy_path = "./backend"
