[tool.poetry]
name = "buho-stocks"
version = "1.0.4"
description = "Application to manage and track a stocks portfolio with dividends and return for a Buy & Hold investmentinvestment strategy."
authors = ["Rene Fernandez <renefernandez@duck.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.4"
channels = { extras = ["daphne"], version = "^4.0.0" }
channels-redis = "^4.1.0"
django = "^5.1.5"
django-celery-results = "^2.5.1"
django-cors-headers = "^3.14.0"
django-filter = "^22.1"
django-money = "^3.4.1"
djangorestframework = "^3.15.2"
djangorestframework-camel-case = "^1.4.2"
drf-extra-fields = "^3.4.1"
drf-yasg = "^1.21.5"
dj-database-url = "^2.1.0"
gunicorn = "^22.0.0"
mysqlclient = "^2.2.4"
pandas = "^2.2.2"
pillow = "^10.3.0"
python-decouple = "^3.8"
redis = "^5.0.1"
requests = "^2.31.0"
requests-cache = "^1.1.0"
sentry-sdk = "2.8.0"
yfinance = "^0.2.40"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^24.3.0"
celery-stubs = "^0.1.3"
coverage = "^6.2"
django-stubs = "^4.2.7"
djangorestframework-stubs = { extras = [
  "compatible-mypy",
], version = "^3.14.5" }
django-filter-stubs = "^0.1.3"
djlint = "^1.34.1"
drf-yasg-stubs = "^0.1.4"
factory-boy = "^3.3.0"
faker = "^22.2.0"
flake8 = "^6.0.0"
flake8-django = "^1.4.0"
isort = "^5.12.0"
mypy = "^1.7.1"
pre-commit = "^2.15.0"
responses = "^0.23.0"
types-requests = "2.28.11.13"
types-redis = "^4.6.0.11"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | client
  | docs
  | data
  | media
  | migrations
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"
# isort configuration:
# https://github.com/PyCQA/isort/wiki/isort-Settings
include_trailing_comma = true
use_parentheses = true
# See https://github.com/PyCQA/isort#multi-line-output-modes
multi_line_output = 3
combine_as_imports = true
src_paths = ["backend"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "buho_backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = [".", "backend"]
